--- a/faq.html
+++ b/faq.html
@@ -434,150 +434,65 @@
       <script src="https://www.paypalobjects.com/api/checkout.js"></script>
 
 
-    <script>
-$(document).ready(function(){
+<script>
     $("#testQuestion").click(function(){
         $("#answerQuestion").fadeToggle("slow");
-        $("#div3").fadeToggle(3000);
     });
-});
+
+	$("#testQuestion2").click(function(){
+	    $("#answerQuestion2").fadeToggle("slow");
+	});
+
+	$("#testQuestion3").click(function(){
+	    $("#answerQuestion3").fadeToggle("slow");
+	});
+
+	$("#testQuestion4").click(function(){
+	    $("#answerQuestion4").fadeToggle("slow");
+
+	});
+
+	$("#testQuestion5").click(function(){
+	    $("#answerQuestion5").fadeToggle("slow");
+
+	});
+	$("#testQuestion6").click(function(){
+	    $("#answerQuestion6").fadeToggle("slow");
+
+	});
+	$("#testQuestion7").click(function(){
+	    $("#answerQuestion7").fadeToggle("slow");
+	});
+	$("#testQuestion8").click(function(){
+	    $("#answerQuestion8").fadeToggle("slow");
+	});
+	$("#testQuestion9").click(function(){
+	    $("#answerQuestion9").fadeToggle("slow");
+	});
+	$("#testQuestion10").click(function(){
+	    $("#answerQuestion10").fadeToggle("slow");
+	});
+	$("#testQuestion11").click(function(){
+	    $("#answerQuestion11").fadeToggle("slow");
+	});
+	$("#testQuestion12").click(function(){
+	    $("#answerQuestion12").fadeToggle("slow");
+	});
+	$("#testQuestion13").click(function(){
+	    $("#answerQuestion13").fadeToggle("slow");
+	});
+	$("#testQuestion14").click(function(){
+	    $("#answerQuestion14").fadeToggle("slow");
+	});
+	$("#testQuestion15").click(function(){
+	    $("#answerQuestion15").fadeToggle("slow");
+	});
+	
+	// toggle +
+ 	$("#testQuestion, #testQuestion2,#testQuestion3,#testQuestion4,#testQuestion5,#testQuestion6,#testQuestion7,#testQuestion8,#testQuestion9,#testQuestion10,#testQuestion11,#testQuestion12,#testQuestion13,#testQuestion14,#testQuestion15").click(function(){
+	    $(this).find('i').toggleClass('fa-minus');
+	});
 </script>
-
-<script>
-$(document).ready(function(){
-$("#testQuestion2").click(function(){
-
-    $("#answerQuestion2").fadeToggle("slow");
-
-});
-});
-</script>
-
-<script>
-$(document).ready(function(){
-$("#testQuestion3").click(function(){
-
-    $("#answerQuestion3").fadeToggle("slow");
-
-});
-});
-</script>
-
-
-
-
-<script>
-$(document).ready(function(){
-$("#testQuestion4").click(function(){
-
-    $("#answerQuestion4").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion5").click(function(){
-
-    $("#answerQuestion5").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion6").click(function(){
-
-    $("#answerQuestion6").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion7").click(function(){
-
-    $("#answerQuestion7").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion8").click(function(){
-
-    $("#answerQuestion8").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion9").click(function(){
-
-    $("#answerQuestion9").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion10").click(function(){
-
-    $("#answerQuestion10").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion11").click(function(){
-
-    $("#answerQuestion11").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion12").click(function(){
-
-    $("#answerQuestion12").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion13").click(function(){
-
-    $("#answerQuestion13").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion14").click(function(){
-
-    $("#answerQuestion14").fadeToggle("slow");
-
-});
-});
-</script>
-<script>
-$(document).ready(function(){
-$("#testQuestion15").click(function(){
-
-    $("#answerQuestion15").fadeToggle("slow");
-
-});
-});
-</script>
-
-
-
-
 
 
   </body>
