--- a/tw.html
+++ b/tw.html
@@ -43,33 +43,32 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" id="topnav">
       <div class="container">
         <div class="row">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" >
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            <img src="assets/images/tinichats_logo_web.png"  />
-          </a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li><a href="tw.html"><strong>關於我們</strong></a></li>
-            <li><a href="#featuresBlock" ><strong>產品特色</strong></a></li>
-            <li><a href="Pricing.html"><strong>價錢方案</strong></a></li>
-            <li><a href="faq.html" ><strong>問與答</strong></a></li>
-            <li><a href="blog.html" ><strong>部落格</strong></a></li>
-			<li><a href="contact.html" ><strong>聯絡我們</strong></a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
-          </ul>
-        </div>
-
-        </div>
-      </div>
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" >
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="#">
+	            <img src="assets/images/tinichats_logo_web.png"  />
+	          </a>
+	        </div>
+	        <div class="collapse navbar-collapse" id="myNavbar">
+	          <ul class="nav navbar-nav">
+	            <li><a href="tw.html"><strong>關於我們</strong></a></li>
+	            <li><a href="#featuresBlock" ><strong>產品特色</strong></a></li>
+	            <li><a href="Pricing.html"><strong>價錢方案</strong></a></li>
+	            <li><a href="faq.html" ><strong>問與答</strong></a></li>
+	            <li><a href="blog.html" ><strong>部落格</strong></a></li>
+				<li><a href="contact.html" ><strong>聯絡我們</strong></a></li>
+	          </ul>
+	          <ul class="nav navbar-nav navbar-right">
+	            <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+	            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
+	          </ul>
+	        </div>
+    	</div>
+     </div>
     </nav>
 
     <!-- nav bar ends -->
@@ -81,7 +80,8 @@
           <aside class="col-5" >
             <img src="assets/images/intro pic.png" alt="tinichats" >
 			<h2><strong>TiniChats<br/>
-			即時線上文字客服</strong></h2>
+			即時線上文字客服</strong>
+			</h2>
           </aside>
           <aside class="col-7" >
 			<h2 class="title-sub">
@@ -104,51 +104,59 @@
   	<div class="container" >
   		<div class="row IndexVideo2"  >
   			<div class="col-5 col-m-12" >
-  				<h3 class="videotitle"><strong>60秒了解TiniChats</strong></h3>
-        </div>
+				<h3 class="videotitle">
+					<strong>60秒了解TiniChats</strong>
+				</h3>
+        	</div>
   			<div class="col-7 col-m-12" >
-          <iframe id="introVideo" src="https://www.youtube.com/embed/smau9cToEGw" frameborder="0" allowFullScreen></iframe>
+	          <iframe id="introVideo" src="https://www.youtube.com/embed/smau9cToEGw" frameborder="0" allowFullScreen></iframe>
   			</div>
   		</div>
   	</div>
 
     <!--============================= Introduction2 =======================-->
     <div id="Indexintro2" >
-      <div class="container">
-      <div class="row FlexBox">
-        <div class="firstFlexbox col-7" >
-          <header><h3><storng><br/>
-					 「真人」+「機器人」
-		      </storng></h3></header>
-          <p id="newadd">
-            如同顧客的行動祕書，使顧客既能保有不受打擾的購物環境，同時也能獲得即時協助。
-			從售前諮詢到售後服務，我們與你一起打造「美好的購物體驗」!
-		      </p>
-        </div>
-        <aside  class="col-5" >
-          <i class="material-icons">face</i>
-	      </aside>
-      </div>
-      <br />
-      <br />
-      <div class="row Intro2Bottom">
-        <div class="col-5" >
-          <i class="material-icons fontOneHundreds">translate</i>
-        </div>
-        <div class="col-7 Intro2part2">
-	        <header><h3><strong><br/>道地語言客服</strong></h3></header>
-    			<p id="newadd">
-    				提供以該語言為母語的客服人員， 擁有流利語言的優勢，
-    	      並依循當地人思維脈絡作為溝通基礎， 溝通順暢又貼心。
-    			</p>
-        </div>
-      </div>
-      </div>
+      	<div class="container">
+		    <div class="row FlexBox">
+		        <div class="firstFlexbox col-7" >
+			        <header>
+						<h3>
+							<strong><br/>
+								 「真人」+「機器人」
+					      	</strong>
+						</h3>
+					</header>
+			        <p id="newadd">
+			            如同顧客的行動祕書，使顧客既能保有不受打擾的購物環境，同時也能獲得即時協助。
+						從售前諮詢到售後服務，我們與你一起打造「美好的購物體驗」!
+					</p>
+		        </div>
+		        <aside  class="col-5" >
+			        <i class="material-icons">face</i>
+				</aside>
+		    </div>
+	    	<br />
+	    	<br />
+	        <div class="row Intro2Bottom">
+		        <div class="col-5" >
+		          	<i class="material-icons fontOneHundreds">translate</i>
+		        </div>
+		        <div class="col-7 Intro2part2">
+			        <header><h3>
+						<strong><br/>道地語言客服</strong>
+					</h3></header>
+		    			<p id="newadd">
+		    				提供以該語言為母語的客服人員， 擁有流利語言的優勢，
+				    	      並依循當地人思維脈絡作為溝通基礎， 溝通順暢又貼心。
+		    			</p>
+		        </div>
+	        </div>
+		</div>
     </div>
 
     <!-- =================Feature========s========= -->
     <div id="featuresBlock" style="height:30px">  <!--just for the sake of anchor -->
-      </div>
+    </div>
       <div id="features3asdfa" class="container">
         <div>
           <!-- <h2 id="featureTitle"> -->
@@ -328,12 +336,12 @@
                               <span id="tooltiptext">提供多面向的客戶分析，包含訪客滿意度訪客來源地區、來源網站、瀏覽器、等待時間、來訪次數等。</span>
                           </div>
                         </li>
-            						<li>
-            						  數據統計(基本)
-            						  <div id="tooltip"><i class="fa fa-question-circle" aria-hidden="true"></i>
-            							  <span id="tooltiptext">如:來源網頁統計、訪客平均數量等。</span>
-            						  </div>
-            						</li>
+    						<li>
+    						  數據統計(基本)
+    						  <div id="tooltip"><i class="fa fa-question-circle" aria-hidden="true"></i>
+    							  <span id="tooltiptext">如:來源網頁統計、訪客平均數量等。</span>
+    						  </div>
+    						</li>
                       </ul>
                       <div class="pricing-footer2">
                         <a href="https://p.allpay.com.tw/uZv9Q" id="opay">
